<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find My Buddies</string>
    <string name="open_drawer_message">Open navigation drawer</string>
    <string name="close_drawer_message">Open navigation drawer</string>
    <string name="action_forceUpdate">Force Update</string>
    <string name="action_logout">Logout</string>
    <string name="action_quit">Quit</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="editText_username">Username</string>
    <string name="editText_password">Password</string>
    <string name="editText_nickname">Nickname</string>
    <string name="navigationDrawer_myBuddies">My Buddies</string>
    <string name="navigationDrawer_findNewBuddie">Find New Buddie</string>
    <string name="navigationDrawer_respondRequests">Respond Requests</string>
    <string name="navigationDrawer_map">Map</string>
    <string name="navigationDrawer_takePicture">Take Picture</string>
    <string name="navigationDrawer_setting">Settings</string>
    <string name="header_myBuddies">My Buddies</string>
    <string name="textView_coordinatesAccuracyLabel">Time stamp</string>
    <string name="textView_LatitudeLabel">Latitude</string>
    <string name="textView_longitudeLabel">Longitude</string>
    <string name="textView_distanceLabel">Distance</string>
    <string name="textView_updateFrequency">Update frequency</string>
    <string name="textView_imagesShowCount">Images count</string>
    <string name="textView_orderBy">Order by</string>
    <string name="textView_measureUnits">Measure units</string>
    <string name="hint_updateFrequency">1 to 100 mins</string>
    <string name="hint_measureUnits">Kilometers or Miles</string>
    <string name="header_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="header_findNewBuddie">Find new Buddie</string>
    <string name="hint_nickname">Nickname</string>
    <string name="button_search">Search</string>
    <string name="button_sendRequest">Send request</string>
    <string name="header_map">Map</string>
    <string name="button_find">Find</string>
    <string name="hint_buddieNickname">Enter buddie nickname</string>

</resources>
