<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginRegisterActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/button_switch"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/background_dark"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_username"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_marginRight="@dimen/activity_all_margin"
        android:layout_marginBottom="@dimen/activity_all_margin"
        android:hint="@string/editText_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_below="@+id/editText_username"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_all_margin"
        android:hint="@string/editText_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_nickname"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_all_margin"
        android:hint="@string/editText_nickname"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button_login"
        android:layout_below="@+id/editText_password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_all_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/button_register"
        android:layout_below="@+id/editText_nickname"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:layout_margin="@dimen/activity_all_margin" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_main"
        android:max="5"
        android:indeterminate="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="visible"/>

</RelativeLayout>