<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyBuddiesActivity">

        <!--
        This title strip will display the currently visible page title, as well as the page
        titles for adjacent pages.
        -->

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#33b5e5"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#fff" />

    </android.support.v4.view.ViewPager>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="false"
        android:clickable="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/header_settings"
            android:id="@+id/homeActivity_pageName"
            android:gravity="center_horizontal"/>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_row_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_row_margin">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView_updateFrequency"
                    android:text="@string/textView_updateFrequency"
                    android:layout_margin="@dimen/activity_all_margin"
                    android:paddingBottom="@dimen/spinner_text_bottom" />

                <Spinner
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_updateFrequency"
                    android:layout_gravity="center_horizontal"
                    android:spinnerMode="dialog"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="false" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textView_measureUnits"
                    android:id="@+id/textView_measureUnits"
                    android:layout_margin="@dimen/activity_all_margin"
                    android:paddingBottom="@dimen/spinner_text_bottom" />

                <Spinner
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_measureUnits"
                    android:layout_gravity="center_horizontal"
                    android:spinnerMode="dialog"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="false" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textView_orderBy"
                    android:id="@+id/textView_orderBy"
                    android:layout_margin="@dimen/activity_all_margin"
                    android:paddingBottom="@dimen/spinner_text_bottom" />

                <Spinner
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_orderBy"
                    android:layout_gravity="center_horizontal"
                    android:spinnerMode="dialog"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="false" />

            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textView_imagesShowCount"
                    android:id="@+id/textView_imagesShowCount"
                    android:layout_margin="@dimen/activity_all_margin"
                    android:paddingBottom="@dimen/spinner_text_bottom" />

                <Spinner
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_imagesCount"

                    android:spinnerMode="dialog"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="false" />

            </RelativeLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:id="@+id/button_save"
                android:layout_marginRight="@dimen/settings_button_right"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111" />

</android.support.v4.widget.DrawerLayout>