<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyBuddiesActivity">

        <!--
        This title strip will display the currently visible page title, as well as the page
        titles for adjacent pages.
        -->

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#33b5e5"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#fff" />

    </android.support.v4.view.ViewPager>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="false"
        android:clickable="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/header_findNewBuddie"
            android:id="@+id/homeActivity_pageName"
            android:gravity="center_horizontal"/>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_searchNickname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_all_margin"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/activity_all_margin"
                android:layout_marginBottom="@dimen/activity_all_margin"
                android:hint="@string/hint_Nickname"
                android:text="ferdis" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_search"
                android:id="@+id/button_search"
                android:layout_below="@+id/editText_searchNickname"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/activity_all_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/button_search"
                android:id="@+id/textView_searchResult"
                android:gravity="center_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sendRequest"
                android:id="@+id/button_sendRequest"
                android:layout_below="@+id/textView_searchResult"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                android:layout_margin="@dimen/activity_all_margin" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar_search"
                android:max="5"
                android:indeterminate="false"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:visibility="visible"/>

        </RelativeLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111" />

</android.support.v4.widget.DrawerLayout>